@@ -37,6 +37,17 @@ ARG=$@
 # add execute permission to rt
 chmod +x ./rt/bin/*
 
+# prepare jvm params
+# default to minimum 4gb heap if Xms not set.
+JAVA_OPTS="$JAVA_OPTS"
+if [[ ! ${JAVA_OPTS} = *"-Xms"* ]]; then
+  JAVA_OPTS+=" -Xms4g"
+fi
+
+# to suppress illegal reflective access warning out of xnio
+# (we depend on xnio transitively via undertow-core)
+JAVA_OPTS+=" --add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+
 ####### WATCHGUARD IMPLEMENTATION #######
 #				    	#
 #   To kill: ps aux | egrep "aion.sh" 	#
@@ -57,7 +68,7 @@ if [[ $1 == "watch" ]]; then
     if $first; then
       set --
       first=false
-    else		  
+    else
       set -- "$@" "$arg"
     fi
   done
@@ -118,7 +129,7 @@ if $guard; then
 		lastBoot=$newBoot
 
 		# Execute Java kernel
-		env EVMJIT="-cache=1" ./rt/bin/java -Xms4g \
+		env EVMJIT="-cache=1" ./rt/bin/java ${JAVA_OPTS} \
 			-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@" &
 		kPID=$!
 		running=true
@@ -156,7 +167,7 @@ if $guard; then
 			  for ((i=0; i<${#threads[@]}; ++i)); do
 			    tTime=$(ps --pid $kPID | egrep -o "[0-9]{2}\.[0-9]{2} ${threads[i]}" | cut -d" " -f1)
 			    tState=$(./rt/bin/jstack -l $kPID | egrep -A1 "${threads[i]}" | egrep -o "State.*" | cut -d" " -f2)
-			    if [[ $tTime == ${tPrev[i]} ]] && [[ $tState == "BLOCKED" ]]; then 
+			    if [[ $tTime == ${tPrev[i]} ]] && [[ $tState == "BLOCKED" ]]; then
 			      echo "## ${threads[i]} THREAD DEAD ##"
 			      (./rt/bin/jstack -l $kPID | egrep -A1 "${threads[i]}") > threadDump_$countRebounce.txt
 			      watching=false
@@ -168,7 +179,6 @@ if $guard; then
 			fi
 
 		done
-
 		# Shutsdown Aion kernel
 		echo "## Killing Kernel ##"
 		kill $kPID
@@ -193,9 +203,7 @@ if $guard; then
 		echo "############################## REBOUNCE COUNT [$countRebounce] ##############################"
 
 	done
-
 else
-
 	JAVA_CMD=java
 	if [ -d "./rt" ]; then
 			JAVA_CMD="./rt/bin/java"
@@ -207,8 +215,8 @@ else
 
 	# if there's CLI args, we just run it and quit
 	if [ "$#" -gt 0 ]; then
-		env EVMJIT="-cache=1" $JAVA_CMD -Xms4g \
-			-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@" 
+		env EVMJIT="-cache=1" $JAVA_CMD ${JAVA_OPTS} \
+			-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@"
 		exit
 	fi
 
@@ -224,7 +232,7 @@ else
 		exit 1
 	}
 
-  	env EVMJIT="-cache=1" $JAVA_CMD -Xms4g \
+  	env EVMJIT="-cache=1" $JAVA_CMD ${JAVA_OPTS} \
   		-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@" &
     kernel_pid=$!
     wait
